sre-chaos-lab/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sre-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sre-app
  template:
    metadata:
      labels:
        app: sre-app
    spec:
      containers:
      - name: sre-app
        image: sre-app
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000

        readinessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 5

        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 10

        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
