sre-chaos-lab/kubernetes/service.yaml
# kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sre-app-service
spec:
  type: NodePort
  selector:
    app: sre-app
  ports:
    - port: 80
      targetPort: 5000
      nodePort: 30007
